--- a/.markdownlint.yml
+++ b/.markdownlint.yml
@@ -1,1 +1,4 @@
+# https://github.com/DavidAnson/markdownlint/blob/main/schema/.markdownlint.yaml
 ---
+# MD013/line-length : Line length : https://github.com/DavidAnson/markdownlint/blob/v0.38.0/doc/md013.md
+MD013: false
