--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "prettier.useEditorConfig": true
+    "prettier.useEditorConfig": true,
+    "[markdown]": {
+        "editor.formatOnSave": true
+    }
 }
